k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-users-service
  labels:
    app: api-users
spec:
  selector:
    app: api-users
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80          # External port exposed to internet
      targetPort: 3000  # Port your app listens on inside container
