k8s/ service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-users-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"   # Use GCP Ingress controller
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-users-service
                port:
                  number: 80
